# webrtc_extract

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: define.h  ns_simulation.h
src/: CMakeLists.txt  common_types.h
src/api/audio/: audio_frame.cc  audio_frame.h
src/common_audio/: wav_file.cc
src/common_audio/resampler/: resampler.cc
src/modules/audio_processing/: audio_buffer.h  common.h
src/modules/audio_processing/agc2/: adaptive_agc.cc  adaptive_digital_gain_applier.cc  fixed_gain_controller.cc  interpolated_gain_curve.cc
src/modules/audio_processing/agc2/rnn_vad/: rnn_vad_tool.cc
src/modules/audio_processing/include/: audio_processing.h
src/modules/audio_processing/logging/: apm_data_dumper.cc  apm_data_dumper.h
src/modules/audio_processing/test/: test_utils.cc  test_utils.h
src/modules/audio_processing/utility/: ooura_fft.cc
src/modules/test/agc_simulation/: agc.cc  agc.h  agc_simulation.h  gain_control_impl_test.cc  gain_control_impl_test.h  gain_controller2_test.cc  gain_controller2_test.h
src/modules/test/ns_simulation/: noise_suppression.c  noise_suppression.h  noise_suppression_impl_test.cc  noise_suppression_impl_test.h  ns_simulation.cc  ns_simulation.h
src/rtc_base/: checks.cc  platform_file.h  swap_queue.h
src/system_wrappers/source/: metrics.cc
test/: CMakeLists.txt  Makefile  main.cpp  webrtc_extract
